Smoke collision flips out with multiple objects #43782

Closed
opened 2015-02-22 22:35:12 +01:00 by gandalf3 · 7 comments
Member

System Information
Archlinux

Blender Version
Broken: 2.73

Short description of error
Smoke simulations gives strange results when using multiple parented collision objects.

Exact steps for others to reproduce the error

  1. Open odd_smoke_collision.blend
  2. Play animation or bake the smoke simulation
  3. Observe strange results
  4. Join the grouped collision objects
  5. re-bake the simulation
  6. Simulation now works as expected
**System Information** Archlinux **Blender Version** Broken: 2.73 **Short description of error** Smoke simulations gives strange results when using multiple parented collision objects. **Exact steps for others to reproduce the error** 1. Open [odd_smoke_collision.blend](https://archive.blender.org/developer/F145317/odd_smoke_collision.blend) 2. Play animation or bake the smoke simulation 3. Observe strange results 4. Join the grouped collision objects 5. re-bake the simulation 6. Simulation now works as expected
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Member

Added subscribers: @miikah, @JulianEisel

Added subscribers: @miikah, @JulianEisel
Member

Can confirm that. @miikah, valid bug or more a known issue/todo?

Can confirm that. @miikah, valid bug or more a known issue/todo?
Miika Hamalainen was assigned by Julian Eisel 2015-02-23 19:58:53 +01:00
Author
Member

I just noticed blender complains about some circular dependencies in the terminal with the parented objects..
However I don't see any in the file, no objects are parented to each other or anything. Maybe I'm not looking close enough?

I just noticed blender complains about some circular dependencies in the terminal with the parented objects.. However I don't see any in the file, no objects are parented to each other or anything. Maybe I'm not looking close enough?

This issue was referenced by ae9e9700c2

This issue was referenced by ae9e9700c28f70db98359c98f5b29d4454cc9a56

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43782
No description provided.